# tsto_server

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.md  Readme.md  build.rs  flake.nix  package-lock.json  package.json  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/workflows/: clippy.yml  docs.yml  release.yml
migrations/: 20250306184348_create_users_table.sql  20250409104401_create_auth_table.sql
src/: config.rs  database.rs  lib.rs  logger.rs  main.rs  util.rs
src/app/: mod.rs
src/app/controllers/: auth.rs  dashboard.rs  direction.rs  events.rs  mayhem.rs  mod.rs  proxy.rs  user.rs
src/app/dashboard/: mod.rs  providers.rs  router.rs  server.rs
src/app/dashboard/components/: address.rs  config.rs  dlc.rs  donuts.rs  events.rs  health.rs  lobby.rs  mod.rs  players.rs  status.rs
src/app/dashboard/components/navbar/: mod.rs  navbar_header.rs  navbar_locale.rs  navbar_outlet.rs
src/app/dashboard/views/: credits.rs  home.rs  login.rs  logs.rs  mod.rs  not_found.rs
src/app/models/: auth.rs  dashboard.rs  direction.rs  events.rs  mod.rs  proxy.rs  tracking.rs  user.rs
src/app/routes/: connect.rs  dashboard.rs  director.rs  mod.rs  proxy.rs  tracking.rs  user.rs
src/app/routes/mayhem/: config.rs  games.rs  link.rs  mod.rs  telemetry.rs  users.rs  userstats.rs
src/assets/: mod.rs  starter_land.pb  tailwind.css
src/assets/directions/: com.ea.game.simpsons4_row.json
src/assets/locales/: de.ftl  en-US.ftl
src/config/: args.rs  direction.rs  env.rs  server.rs
src/protos/: AuthData.proto  ClientConfigData.proto  ClientLog.proto  ClientMetrics.proto  ClientTelemetry.proto  Common.proto  CustomerServiceData.proto  Error.proto  GambleData.proto  GameplayConfigData.proto  GetFriendData.proto  LandData.proto  MatchmakingData.proto  OffersData.proto  PurchaseData.proto  WholeLandTokenData.proto  mod.rs
src/util/: credits.rs  error.rs  extractors.rs  protobuf.rs  xml.rs
