[package]
name = "tsto_server"
description = "A server for the simpsons tapped out"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-lazy = "0.1.2"
async-std = "1.13.1"
axum = { version = "0.7.9", features = ["macros"], optional = true }
axum-core = { version = "^0.4.5", optional = true }
axum-response-cache = { version = "0.2.0", optional = true, default-features = false, features = [
    "axum07",
] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"], optional = true }
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
dioxus-i18n = "0.4.3"
dioxus-sdk = { version = "0.6.0", features = ["storage"] }
directories = { version = "6.0.0", optional = true }
futures = "0.3.31"
gloo-net = "0.6.0"
hmac = { version = "0.12.1", features = ["std"], optional = true }
jwt = { version = "0.16.0", optional = true }
lazy_static = "1.5.0"
once_cell = "1.21.3"
pretty-duration = "0.1.1"
prost = "0.13.5"
rand = { version = "0.9.0", optional = true }
reqwest = { version = "0.12.15", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
    # "rustls-tls",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = { version = "0.10.8", optional = true }
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
    "chrono",
], optional = true }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"], optional = true }
toml = { version = "0.8.20", optional = true }
tonic = { version = "0.13.0", default-features = false, features = [
    "codegen",
    "prost",
], optional = true }
tower-http = { version = "0.6.2", features = ["fs", "trace"], optional = true }
tracing = "0.1.41"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "serde_json",
    "serde",
    "tracing",
] }
uuid = { version = "1.15.1", features = ["v4"] }
web-sys = { version = "0.3.77", features = ["Blob", "Event", "Url"] }


[build-dependencies]
anyhow = "1.0.97"
tonic-build = { version = "0.13.0", default-features = false, features = [
    "prost",
] }
protoc-bin-vendored = "3.1.0"


[features]
server = [
    "dep:axum-core",
    "dep:axum-response-cache",
    "dep:axum",
    "dep:clap",
    "dep:directories",
    "dep:hmac",
    "dep:jwt",
    "dep:rand",
    "dep:sha2",
    "dep:sqlx",
    "dep:tokio",
    "dep:toml",
    "dep:tonic",
    "dep:tower-http",
    "dioxus/server",
]
web = ["dioxus/web", "uuid/js"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
